Refactored inventory to be more data focused. - Everything now works off a globals.js data repository - Separated data management from UI drawing

--- a/inventory-test/inventory.html
+++ b/inventory-test/inventory.html
@@ -16,38 +16,38 @@
 		<div class="directions">Shift-click to delete items!</div>
 		<div class="app">
 			<div class="inventory">
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
-				<div class="slot" data-itemid=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
+				<div class="slot" data-slot-id=""></div>
 			</div>
 		</div>
 		<div class="buttons"></div>
