Made the inventory resizable for debugging

--- a/inventory-test/inventory.html
+++ b/inventory-test/inventory.html
@@ -13,42 +13,19 @@
 				<a class="link" href="inventory.html">Inventory</a>
 			</div>
 		</div>
+		<div class="inventorySize">
+			<label for="columns">
+				Columns
+				<input id="columns" type="number" placeholder="Columns" max="15" min="5" />
+			</label>
+			<label for="rows">
+				Rows
+				<input id="rows" type="number" placeholder="Rows" max="10" min="1" />
+			</label>
+		</div>
 		<div class="directions">Shift-click to delete items!</div>
 		<div class="app">
-			<div class="inventory">
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-				<div class="slot" data-slot-id=""></div>
-			</div>
+			<div class="inventory"></div>
 		</div>
 		<div class="buttons"></div>
 		<div id="warning"></div>
